--- a/chat_client.html
+++ b/chat_client.html
@@ -88,7 +88,7 @@
     <div id="connectionModal" class="modal">
         <div class="modal-content">
             <h3>Connect to xsukax Chatroom System</h3>
-            <input type="text" id="serverUrl" placeholder="Enter server URL" value="wss://chat.xsukax.net">
+            <input type="text" id="serverUrl" placeholder="Enter server URL" value="ws://chat.xsukax.net:3333">
             <input type="text" id="usernameInput" placeholder="Enter username (optional)">
             <div class="optional-label">Leave empty for auto-generated username (xsukax0001, xsukax0002, etc.)</div>
             <div>
